--- a/src/app/pages/home/navbar/navbar.component.html
+++ b/src/app/pages/home/navbar/navbar.component.html
@@ -1,5 +1,12 @@
-<div class="bg-blue-100">
-  <div class="max-w-screen-2xl mx-auto px-[5vw] py-4">
-    <p class="text-4xl">navbar works!</p>
+<div class="border-gray-200 border-b" >
+  <div class="max-w-screen-2xl mx-auto px-[5vw] py-4 relative flex justify-between items-center">
+    <a routerLink="/" class="font-trade-winds text-xl flex items-center"><span
+        class="text-blue-900 text-2xl font-trade-winds">H</span>aroon</a>
+    <ul class="flex gap-4 items-center font-[500] text-gray-600 max-sm:absolute max-sm:right-[5vw] max-sm:top-16 max-sm:flex-col">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Blogs</a></li>
+    </ul>
   </div>
 </div>
