--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Trade+Winds:wght@400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,4 +8,8 @@
 * {
   scroll-behavior: smooth;
   font-family: "Inter" , sans-serif;
+}
+
+html{
+  background-color: #fafafc;
 }
