--- a/src/app/pages/home/navbar/navbar.component.html
+++ b/src/app/pages/home/navbar/navbar.component.html
@@ -1,12 +1,31 @@
-<div class="border-gray-200 border-b" >
+<div class="border-gray-200 border-b">
   <div class="max-w-screen-2xl mx-auto px-[5vw] py-4 relative flex justify-between items-center">
-    <a routerLink="/" class="font-trade-winds text-xl flex items-center"><span
-        class="text-blue-900 text-2xl font-trade-winds">H</span>aroon</a>
-    <ul class="flex gap-4 items-center font-[500] text-gray-600 max-sm:absolute max-sm:right-[5vw] max-sm:top-16 max-sm:flex-col">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Blogs</a></li>
+    <a routerLink="/" class="font-trade-winds text-2xl flex items-center"><span
+        class="text-slate-950 font-trade-winds">H</span>aroon</a>
+    <div (click)="navClick(f)" [style.display]="isCollapsed() ? 'block' : 'none'"
+      class="w-[100vw] h-[100vh] z-0 fixed top-0 left-0"></div>
+    <ul #f
+      class="flex gap-4 items-center font-[500] text-gray-500 max-sm:absolute max-sm:right-[5vw] max-sm:top-16 max-sm:flex-col max-sm:bg-white max-sm:p-6 max-sm:gap-2 max-sm:items-start max-sm:z-10 max-sm:hidden max-sm:shadow max-sm:w-[150px]">
+      <li>
+        <a (click)="navClick(f)" routerLink="/" routerLinkActive="active"><fa-icon [icon]="faHome" class="mr-2 sm:hidden"></fa-icon>Home</a>
+      </li>
+      <li>
+        <a (click)="navigate('#about')"><fa-icon [icon]="faAbout" class="mr-2 sm:hidden"></fa-icon>About</a>
+      </li>
+      <li>
+        <a (click)="navigate('#projects')"><fa-icon [icon]="faProjects" class="mr-2 sm:hidden"></fa-icon>Projects</a>
+      </li>
+      <li>
+        <a (click)="navigate('#contact')"><fa-icon [icon]="faContact" class="mr-2 sm:hidden"></fa-icon>Contact</a>
+      </li>
+      <li>
+        <a (click)="navClick(f)"  routerLink="/blogs" routerLinkActive="active"><fa-icon [icon]="fablog"
+            class="mr-2 sm:hidden"></fa-icon>Blogs</a>
+      </li>
     </ul>
+    <a (click)="navClick(f)" class="flex sm:hidden flex-col justify-center items-end aspect-square w-8 gap-2">
+      <div [class.open1]="isCollapsed()" class="h-[5px] w-full bg-gray-700 rounded-full duration-300"></div>
+      <div [class.open2]="isCollapsed()" class="h-[5px] w-2/3 bg-gray-700 rounded-full duration-300"></div>
+    </a>
   </div>
 </div>
