--- a/src/app/pages/home/hero/hero.component.css
+++ b/src/app/pages/home/hero/hero.component.css
@@ -1,16 +1,26 @@
-.rotateAni{
+.rotateAni {
   animation: rotate 50s linear infinite;
 }
-.rotateAniR{
+
+.rotateAniR {
   animation: rotate 50s linear infinite reverse;
 }
+
 @keyframes rotate {
   0% {
     transform: rotate(0deg);
-  scale: 1.3;
+    scale: 1.3;
   }
+
   100% {
     transform: rotate(360deg);
-  scale: 1.3;
+    scale: 1.3;
   }
+}
+
+.bg-1 {
+  background: rgb(250, 250, 252);
+  background: linear-gradient(90deg,
+      rgba(250, 250, 252, 1) 0%,
+      rgba(0, 0, 0, 0) 100%);
 }
