--- a/src/app/pages/home/hero/hero.component.html
+++ b/src/app/pages/home/hero/hero.component.html
@@ -28,6 +28,6 @@
         </h1>
       </div>
     </div>
-    <canvas #canvas class="absolute right-0 pointer-events-none -z-20 max-sm:-bottom-0 max-sm:translate-y-full sm:top-0"></canvas>
+    <canvas #canvas class="sm:absolute right-0 pointer-events-none -z-20 top-0"></canvas>
   </div>
 </div>
