exploring material 3 theming

--- a/src/app/features/blog/blog.component.html
+++ b/src/app/features/blog/blog.component.html
@@ -1,6 +1,6 @@
-<main class="blog-container">
+<main class="blog-container ">
   @if (blogInfo$ | async; as blogInfo) {
-  <h2>{{ blogInfo["title"] }}</h2>
+  <h1>{{ blogInfo["title"] }}</h1>
   <h3>{{ blogInfo["date"] }}</h3>
   @for (keyword of blogInfo["keywords"]; track keyword) {
   <span>{{ keyword }}</span>
@@ -8,3 +8,4 @@
   }
   <section [innerHTML]="blogContent$ | async"></section>
 </main>
+<section>
