--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,30 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@use '@angular/material' as mat;
+@use './app/features/blog/blog.theme' as blog;
+@include mat.core();
+
+$light-theme: mat.define-theme((
+  color: (
+    theme-type: light,
+    primary: mat.$azure-palette,
+    tertiary: mat.$blue-palette,
+  ),
+  density: (
+    scale: 0,
+  )
+));
+
+@include mat.typography-hierarchy($light-theme);
+
+:root {
+  @include mat.all-component-themes($light-theme);
+  @include blog.theme($light-theme);
+}
+
+html, body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
