--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -2,6 +2,36 @@
   margin: 50px auto;
   max-width: 1000px;
   padding: 0 5vw;
-   h1 {
+   h4 {
+    margin-top: 0;
+  }
+  h2{
+    margin-top: 60px;
+  }
+  div{
+    padding: 5px 20px ;
+    border-left: 5px solid #38bdf8;
+  }
+  h1{
+    margin: 0;
+  }
+  span{
+    color: #bae6fd;
+    margin-right: 10px;
+  }
+  pre{
+    background-color: #0f172a;
+    padding: 20px;
+    border-radius: 5px;
+  }
+  p{
+    line-height: 1.5;
+  }
+  li{
+    margin: 5px 0;
+  }
+  code{
+    white-space: pre-wrap;
   }
 }
+
