--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,31 @@
-@use '@angular/material' as mat;
-@use './app/features/blog/blog.theme' as blog;
-@include mat.core();
-
-$light-theme: mat.define-theme((
-  color: (
-    theme-type: light,
-    primary: mat.$azure-palette,
-    tertiary: mat.$blue-palette,
-  ),
-  density: (
-    scale: 0,
-  )
-));
-
-@include mat.typography-hierarchy($light-theme);
-
 :root {
-  @include mat.all-component-themes($light-theme);
-  @include blog.theme($light-theme);
+  --background-color: #f5f5f5;
+  --text-color: #020617;
+  --dark-text-color: #f5f5f5;
+  --dark-background-color: #020617;
 }
 
-html, body {
-  height: 100%;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
+
+html {
+  // background-color: var(--background-color);
+  // color: var(--text-color);
+  background-color: var(--dark-background-color);
+  color: var(--dark-text-color);
+}
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: var(--dark-background-color);
+    color: var(--dark-text-color);
+  }
+}
