--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<section>
+  <div>
+    <a href="https://github.com/HaroonSaifi17"><i class="pi pi-github"></i></a>
+    <a href="https://linkedin.com/in/haroonsaifi17"><i class="pi pi-linkedin"></i></a>
+    <a href="mailto:haroonsaifidev2@gmail.com"><i class="pi pi-at"></i></a>
+    <a href="https://x.com/HaroonSaifi17_"><i class="pi pi-twitter"></i></a>
+  </div>
+</section>
