--- a/src/app/features/blog/blog.component.html
+++ b/src/app/features/blog/blog.component.html
@@ -10,6 +10,6 @@
     </div>
   </div>
   }
-  <section [innerHTML]="blogContent$ | async"></section>
+  <section class="markdown-content" [innerHTML]="blogContent$ | async"></section>
 </main>
 <section></section>
