--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,4 @@
 <p>home works!</p>
+<a routerLink="/blog/frontends-are-changing-too-fast">frontends-are-changing-too-fast</a> <br>
+<a routerLink="/blog/how-to-setup-zoneless-angular-project">how-to-setup-zoneless-angular-project</a> <br>
+<a routerLink="/blog/tech-companies-are-ruining-our-lives">tech-companies-are-ruining-our-lives</a>
