--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -7,7 +7,7 @@
   h3 {
     margin-top: 10px;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 16px;
   }
 
   h2 {
@@ -16,23 +16,25 @@
     padding-left: 10px;
   }
 
-  div {
+  >div {
     margin: 0 -20px;
     padding: 30px 20px;
     background-color: var(--slate-200);
 
-    div {
+    >div {
       display: flex;
       gap: 10px;
       flex-wrap: wrap;
+      padding: 20px 0;
     }
   }
 
   h1 {
     margin: 0;
+    margin-top: 20px;
   }
 
-  >span {
+  >div>div>span {
     background-color: var(--slate-300);
     padding: 4px 6px;
     border-radius: 50px;
@@ -58,11 +60,11 @@
 @media (prefers-color-scheme: dark) {
   .blog-container {
 
-    >span {
+    >div>div>span {
       background-color: var(--slate-800);
       color: var(--slate-400);
     }
-    div {
+    >div {
       background-color: var(--slate-900);
     }
   }
@@ -74,13 +76,16 @@
   right: 10px;
   cursor: pointer;
   background-color: var(--slate-300);
-  box-shadow: none;
-  padding: 5px 10px;
   border-radius: 5px;
   color: var(--slate-600);
   font-size: 14px;
   font-weight: 500;
   transition: background-color 0.3s;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:hover {
     background-color: var(--slate-400);
