--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div>
     <a routerLink="/">
-    <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 96">
+    <svg id="logo" height="40" width="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 96">
       <g transform="translate(-8.000000, -2.000000)">
         <g transform="translate(11.000000, 5.000000)">
           <path class="path" d="M31.4,30v30v-15h15v-15v30" />
