--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import "primeicons/primeicons.css";
 
 :root {
-  --slate-50: #f8fafc;
+  --slate-50: #fafafa;
   --slate-100: #f1f5f9;
   --slate-200: #e2e8f0;
   --slate-300: #cbd5e1;
