--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -2,7 +2,7 @@
   margin: 50px auto;
   max-width: 1000px;
   padding: 0 5vw;
-  margin-top: 20px;
+  margin-top: 0;
 
   h3 {
     margin-top: 10px;
@@ -19,7 +19,8 @@
   >div {
     margin: 0 -20px;
     padding: 30px 20px;
-    background-color: var(--slate-200);
+    border-top: 1px solid var(--slate-300);
+    border-bottom: 1px solid var(--slate-300);
 
     >div {
       display: flex;
@@ -35,10 +36,10 @@
   }
 
   >div>div>span {
-    background-color: var(--slate-300);
     padding: 4px 6px;
     border-radius: 50px;
     color: var(--slate-600);
+    border: 1px solid var(--slate-300);
   }
 
   pre {
@@ -61,11 +62,12 @@
   .blog-container {
 
     >div>div>span {
-      background-color: var(--slate-800);
       color: var(--slate-400);
+      border: 1px solid var(--slate-600);
     }
     >div {
-      background-color: var(--slate-900);
+      border-top: 1px solid var(--slate-700);
+      border-bottom: 1px solid var(--slate-700);
     }
   }
 }
@@ -86,6 +88,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 
   &:hover {
     background-color: var(--slate-400);
