--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -4,12 +4,12 @@
 }
 .path{
   fill:transparent;
-  stroke:var(--accent);
+  stroke:var(--slate-900);
   stroke-width:5;
 }
 .polygon{
   fill:transparent;
-  stroke:var(--accent);
+  stroke:var(--slate-400);
   stroke-width:5;
   stroke-linecap:round;
   stroke-linejoin:round;
@@ -21,4 +21,9 @@ nav div {
   max-width:1200px;
   margin:0 auto;
   padding:20px 5vw;
+}
+@media (prefers-color-scheme: dark) {
+  .path{
+    stroke:var(--slate-50);
+  }
 }
