--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -4,7 +4,7 @@
   padding: 0 5vw;
   margin-top: 0;
 
-  h3 {
+  >h3 {
     margin-top: 10px;
     font-weight: 400;
     font-size: 16px;
@@ -15,6 +15,7 @@
 
   h2 {
     margin-top: 60px;
+    margin-bottom: 25px;
     border-left: 5px solid var(--accent);
     padding-left: 10px;
   }
@@ -37,6 +38,11 @@
     margin: 0;
     margin-top: 20px;
   }
+  p code {
+    background-color: var(--slate-200);
+    padding: 2px 4px;
+    border-radius: 5px;
+  }
 
   >div>div>span {
     padding: 4px 6px;
@@ -49,6 +55,7 @@
     border-radius: 5px;
     font-size: 14px;
     overflow-x: scroll;
+    margin: 30px 0;
   }
 
   p {
@@ -74,13 +81,16 @@
       border-top: 1px solid var(--slate-700);
       border-bottom: 1px solid var(--slate-700);
     }
+    p code {
+      background-color: var(--slate-700);
+    }
   }
 }
 
 .copy-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   cursor: pointer;
   background-color: var(--slate-300);
   border-radius: 5px;
