--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -1,5 +1,5 @@
 .blog-container {
-  margin: 50px auto;
+  margin: 90px auto;
   max-width: 1000px;
   padding: 0 5vw;
   margin-top: 0;
@@ -16,6 +16,11 @@
   h2 {
     margin-top: 60px;
     margin-bottom: 25px;
+  }
+
+  blockquote{
+    margin: 10px 0;
+    margin-top: 40px ;
     border-left: 5px solid var(--accent);
     padding-left: 10px;
   }
