--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -1,4 +1,5 @@
 .blog-container {
+  overflow: hidden;
   margin: 90px auto;
   max-width: 1000px;
   padding: 0 5vw;
@@ -72,6 +73,10 @@
   }
   .code{
     position: relative;
+  }
+  img{
+    max-width: 80vw;
+    width: 100%;
   }
 }
 
