--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -11,7 +11,8 @@
     font-size: 16px;
   }
   a{
-    color: var(--accent);
+    color: black;
+    font-weight: 700;
   }
 
   h2 {
@@ -93,6 +94,9 @@
     }
     p code {
       background-color: var(--slate-700);
+    }
+    a{
+      color: white;
     }
   }
 }
