--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,5 +1,27 @@
 section{
-  max-width: 1000px;
+  max-width: 1400px;
   margin: 50px auto;
   padding: 0 5vw;
+}
+.home {
+  &-blog{
+    &-item{
+      display: flex;
+      gap: 15px;
+      padding: 20px 0;
+      align-items: center;
+    }
+    a{
+      color: black;
+      font-weight: 700;
+    }
+    span{
+     white-space: nowrap;
+    }
+    @media (prefers-color-scheme: dark){
+      a{
+        color: white;
+      }
+    }
+  }
 }
