--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,6 @@
 <section>
   <div class="home-blog">
+    <p>sometingj change</p>
     <h1>Blogs</h1>
     <div class="home-blog-list">
       @for(blog of blogInfo;track blog.path){
