--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,8 +1,31 @@
 <section>
-  <div>
-    <h1>Full stack Developer</h1>
-    <h2>UX/UI Designer</h2>
-    <h3>Freelancer</h3>
+  <div class="hero">
+    <h1 class="hero-heading">
+      Creating digital experiences people actually enjoy using
+    </h1>
+    <div class="hero-subsection">
+      <div class="hero-arc">
+        <div class="hero-wpr">
+          <div>
+            <div class="arc-text">
+              @for (char of arcText; let i = $index; track i) {
+                <span [style.rotate]="i * 13 + 'deg'">{{ char }}</span>
+              }
+            </div>
+          </div>
+          <div>
+            <img ngSrc="/images/haroon.jpeg" alt="" width="60" height="60" />
+          </div>
+        </div>
+      </div>
+      <div>
+        <h3 class="hero-subheading">
+          I'm a web developer with 2 years of experience, based on India. I
+          mostly enjoy building software in the sweet spot where engineering and
+          design meet.
+        </h3>
+      </div>
+    </div>
   </div>
 </section>
 <section>
