--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -18,9 +18,13 @@ nav div {
   display:flex;
   justify-content:space-between;
   align-items:center;
-  max-width:1200px;
+  max-width:1400px;
   margin:0 auto;
   padding:20px 5vw;
+  span{
+    font-size:20px;
+    font-weight:800;
+  }
 }
 @media (prefers-color-scheme: dark) {
   .path{
