--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -9,12 +9,12 @@
           <div>
             <div class="arc-text">
               @for (char of arcText; let i = $index; track i) {
-                <span [style.rotate]="i * 13 + 'deg'">{{ char }}</span>
+                <span [style.rotate]="i * 12 + 'deg'">{{ char }}</span>
               }
             </div>
           </div>
           <div>
-            <img ngSrc="/images/haroon.jpeg" alt="" width="60" height="60" />
+            <img ngSrc="/images/haroon.webp" alt="" width="60" height="60" />
           </div>
         </div>
       </div>
