--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -59,6 +59,10 @@ section {
     font-size: 20px;
     font-weight: 400;
     max-width: 900px;
+    color: var(--slate-600);
+    @media(prefers-color-scheme: dark) {
+      color: var(--slate-300);
+    }
   }
 
   &-arc {
@@ -109,5 +113,6 @@ section {
     font-weight: 700;
     right: 0;
     bottom: 0;
+    text-transform: uppercase;
   }
 }
