--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,11 +1,19 @@
 section {
-  max-width: 1400px;
+  max-width: 1100px;
   margin: 50px auto;
   padding: 0 5vw;
 }
 
 .home {
   &-blog {
+    >h1 {
+      font-size: 30px;
+
+      @media (max-width: 768px) {
+        font-size: 20px;
+      }
+    }
+
     &-item {
       display: flex;
       gap: 15px;
@@ -27,92 +35,5 @@ section {
         color: white;
       }
     }
-  }
-}
-
-.hero {
-  padding: 20px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  &-heading {
-    font-size: 60px;
-    max-width: 800px;
-
-    @media (max-width: 768px) {
-      font-size: 35px;
-    }
-  }
-
-  &-subsection {
-    display: flex;
-    gap: 20px;
-
-    >div {
-      flex: 1;
-    }
-  }
-
-  &-subheading {
-    font-size: 20px;
-    font-weight: 400;
-    max-width: 900px;
-    color: var(--slate-600);
-    @media(prefers-color-scheme: dark) {
-      color: var(--slate-300);
-    }
-  }
-
-  &-arc {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    @media (max-width: 768px) {
-      flex:0 !important;
-    }
-  }
-
-  &-wpr {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    aspect-ratio: 1/1;
-    width: 120px;
-
-    >div {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      img {
-        border-radius: 100%;
-      }
-    }
-  }
-}
-
-.arc-text {
-  position: relative;
-  width: 0.5px;
-  height: 0.5px;
-  transform: translateY(60px);
-
-  span {
-    position: absolute;
-    display: inline-block;
-    height: 120px;
-    font-size: 12px;
-    width: 0.5px;
-    text-align: center;
-    font-weight: 700;
-    right: 0;
-    bottom: 0;
-    text-transform: uppercase;
   }
 }
