--- a/src/app/layout/hero/hero.component.scss
+++ b/src/app/layout/hero/hero.component.scss
@@ -1,5 +1,7 @@
 .hero {
-  padding: 70px 0;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 70px 5vw;
   display: flex;
   flex-direction: column;
   align-items: center;
