--- a/src/app/layout/hero/hero.component.scss
+++ b/src/app/layout/hero/hero.component.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   @media (max-width: 768px) {
-    padding: 40px 0;
+    padding: 40px 5vw;
   }
 
   &-heading {
