--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -1,5 +1,7 @@
 <section>
   <div>
     <h2>ABOUT ME</h2>
+
+    <img src="/images/exp1.webp" srcset="/images/exp2.webp 756w, /images/exp1.webp 1200w" alt="Responsive Image" />
   </div>
 </section>
