--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -14,7 +14,7 @@
             </div>
           </div>
           <div>
-            <img ngSrc="/images/haroon.webp" alt="" width="60" height="60" />
+            <img ngSrc="/images/haroon.webp" alt="haroon" width="75" height="75" />
           </div>
         </div>
       </div>
