--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -14,6 +14,10 @@
           Developed a comprehensive platform for competitive exam preparation
           with practice tests and instant results
         </p>
+        <div class="projects-card-tags">
+          <span>Angular</span>
+          <span>Express</span>
+        </div>
       </div>
       <div class="projects-card">
         <div>
@@ -27,6 +31,10 @@
           Built a professional interior design website featuring projects with
           an interactive 3D photosphere.
         </p>
+        <div class="projects-card-tags">
+          <span>Angular</span>
+          <span>Tailwind css</span>
+        </div>
       </div>
       <div class="projects-card">
         <div>
@@ -40,6 +48,10 @@
           Developed a visually appealing website for the college society
           ”GeeksforGeeks Chapter ADGIPS”.
         </p>
+        <div class="projects-card-tags">
+          <span>ReactJs</span>
+          <span>NodeJs</span>
+        </div>
       </div>
       <div class="projects-card">
         <div>
@@ -50,8 +62,11 @@
         </div>
         <h3>HackNChill</h3>
         <p>
-          Created a dynamic hackathon website with a Netflix-inspired UI design
+          Created a dynamic hackathon website with a Netflix-inspired UI design and based on Squid Game theme.
         </p>
+        <div class="projects-card-tags">
+          <span>ReactJs</span>
+        </div>
       </div>
       <div class="projects-card">
         <div>
@@ -65,6 +80,9 @@
           Developed a terminal-based Snake game with a personal portfolio site
           for showcasing projects.
         </p>
+        <div class="projects-card-tags">
+          <span>Rust</span>
+        </div>
       </div>
     </div>
   </div>
