--- a/src/app/layout/hero/hero.component.scss
+++ b/src/app/layout/hero/hero.component.scss
@@ -6,13 +6,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   @media (max-width: 768px) {
     padding: 40px 5vw;
   }
 
   &-heading {
-    font-size: 60px;
-    max-width: 800px;
+    font-size: 70px;
+    max-width: 1000px;
+    letter-spacing: 2px;
+    line-height: 1.2;
+    margin-bottom: 10px;
 
     @media (max-width: 768px) {
       font-size: 35px;
@@ -29,11 +33,13 @@
   }
 
   &-subheading {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
-    max-width: 900px;
+    line-height: 1.4;
+    max-width: 65ch;
     color: var(--slate-600);
-    @media(prefers-color-scheme: dark) {
+
+    @media (prefers-color-scheme: dark) {
       color: var(--slate-300);
     }
   }
@@ -42,8 +48,9 @@
     display: flex;
     justify-content: right;
     align-items: center;
+
     @media (max-width: 768px) {
-      flex:0 !important;
+      flex: 0 !important;
     }
   }
 
@@ -53,7 +60,7 @@
     align-items: center;
     position: relative;
     aspect-ratio: 1/1;
-    width: 120px;
+    width: 150px;
 
     >div {
       position: absolute;
@@ -65,6 +72,10 @@
 
       img {
         border-radius: 100%;
+        &:hover {
+          scale: 1.1;
+          transition-duration: 0.5s;
+        }
       }
     }
   }
@@ -74,12 +85,22 @@
   position: relative;
   width: 0.5px;
   height: 0.5px;
-  transform: translateY(60px);
-
+  transform: translateY(75px);
   span {
+  animation: arc 100s linear infinite;
+    @keyframes arc {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    opacity: 0.8;
     position: absolute;
     display: inline-block;
-    height: 120px;
+    height: 150px;
     font-size: 12px;
     width: 0.5px;
     text-align: center;
