--- a/src/app/layout/projects/projects.component.scss
+++ b/src/app/layout/projects/projects.component.scss
@@ -5,6 +5,7 @@
 
   >h1 {
     font-size: 30px;
+    font-weight: 600;
 
     @media (max-width: 768px) {
       font-size: 20px;
@@ -15,26 +16,59 @@
 .projects {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   padding: 40px 0;
   gap: 20px;
 
   &-card {
     width: 300px;
-    border: 1px solid var(--slate-300);
+    background-color: #ededed;
     padding: 20px;
     border-radius: 5px;
 
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--slate-800);
-      border:none;
+    &:hover {
+      box-shadow:
+        rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+        rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+
+      @media (prefers-color-scheme: dark) {
+        box-shadow:
+          rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+          rgba(255, 255, 255, 0.5) 0px 0px 0px 1px;
+      }
     }
 
-    @media (max-width: 700px) {
+    h3 {
+      letter-spacing: 1px;
+      font-size: 25px;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--slate-800);
+      border: none;
+    }
+
+    @media (max-width: 777px) {
       width: 100%;
     }
 
-    >div {
+
+    &-tags{
+      display: flex;
+      gap: 10px;
+      span{
+        border: 1px solid var(--slate-500);
+        color: var(--slate-500);
+        border-radius: 50px;
+        padding: 3px 8px;
+        @media (prefers-color-scheme: dark) {
+          border: 1px solid var(--slate-400);
+          color: var(--slate-400);
+        }
+
+      }
+    }
+
+    >div:nth-child(1) {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -42,6 +76,10 @@
       >a {
         text-decoration: none;
         color: var(--slate-800);
+        &:hover {
+          scale: 1.1;
+          transition-duration: 0.5s;
+        }
 
         @media (prefers-color-scheme: dark) {
           color: var(--slate-100);
@@ -53,7 +91,7 @@
         font-size: 14px;
 
         @media (prefers-color-scheme: dark) {
-          color: var(--slate-400);
+          color: var(--slate-500);
         }
 
         >i {
@@ -61,10 +99,11 @@
         }
       }
     }
+
   }
 
   &-card:nth-child(1) h3 {
-    color: #d77c7c;
+    color: #b45151;
 
     @media (prefers-color-scheme: dark) {
       color: #ffadad;
@@ -72,7 +111,7 @@
   }
 
   &-card:nth-child(2) h3 {
-    color: #d9a576;
+    color: #b67d47;
 
     @media (prefers-color-scheme: dark) {
       color: #ffd6a5;
@@ -80,7 +119,7 @@
   }
 
   &-card:nth-child(3) h3 {
-    color: #d1d68a;
+    color: #a9ad4d;
 
     @media (prefers-color-scheme: dark) {
       color: #fdffb6;
@@ -88,7 +127,7 @@
   }
 
   &-card:nth-child(4) h3 {
-    color: #98d198;
+    color: #5fa15f;
 
     @media (prefers-color-scheme: dark) {
       color: #caffbf;
@@ -96,7 +135,7 @@
   }
 
   &-card:nth-child(5) h3 {
-    color: #6db2b8;
+    color: #458b91;
 
     @media (prefers-color-scheme: dark) {
       color: #9bf6ff;
