--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -6,12 +6,10 @@ section {
 
 .home {
   &-blog {
-    >h1 {
+    > h1 {
       font-size: 30px;
-
-      @media (max-width: 768px) {
-        font-size: 20px;
-      }
+      font-weight: 600;
+      opacity: 0.8;
     }
 
     &-item {
