--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -1,7 +1,16 @@
 <section>
   <div>
     <h2>ABOUT ME</h2>
+    <p>
+      I'm a full-stack developer who learned to code by building projects and
+      solving problems. I've explored various related fields, including DevOps,
+      Android, and open source. I'm also a Linux enthusiast who uses Arch (by
+      the way) and manages my dotfiles to perfection.
+    </p>
 
-    <img src="/images/exp1.webp" srcset="/images/exp2.webp 756w, /images/exp1.webp 1200w" alt="Responsive Image" />
+    <h4>Here’s the spread of my core skills:</h4>
+    <img class="large-img" src="/images/exp1.webp" alt="exp1" />
+    <img class="small-img" src="/images/exp2.webp" alt="exp2" />
+    <p>If you'd like to learn more about me or my work, hit me up!</p>
   </div>
 </section>
