--- a/src/app/layout/about/about.component.scss
+++ b/src/app/layout/about/about.component.scss
@@ -1,17 +1,34 @@
-section{
-  >div{
+section {
+  >div {
     max-width: 1100px;
     margin: 50px auto;
     padding: 0 5vw;
-    >h2{
+
+    >h2 {
       font-size: 30px;
-      @media (max-width: 768px) {
-        font-size: 20px;
-      }
+      font-weight: 600;
+      opacity: 0.8;
     }
-    >img{
+
+    >img {
       width: 100%;
       border-radius: 15px;
     }
+    >p{
+      max-width: 65ch;
+    }
+  }
+}
+
+.large-img{
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+.small-img{
+  display: none;
+  @media (max-width: 768px) {
+    display: block;
+    border-radius: 15px;
   }
 }
