--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,15 +1,25 @@
-<nav>
-  <div>
-    <a routerLink="/">
-    <svg id="logo" height="40" width="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 96">
-      <g transform="translate(-8.000000, -2.000000)">
-        <g transform="translate(11.000000, 5.000000)">
-          <path class="path" d="M31.4,30v30v-15h15v-15v30" />
-          <polygon class="polygon" fill="transparent" points="39 0 0 22 0 67 39 90 78 68 78 23" />
+<nav class="nav">
+  <div class="nav_container">
+    <a class="nav_logo" routerLink="/">
+      <svg
+        id="logo"
+        height="40"
+        width="40"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 84 96"
+      >
+        <g transform="translate(-8.000000, -2.000000)">
+          <g transform="translate(11.000000, 5.000000)">
+            <path class="nav_logo_path" d="M31.4,30v30v-15h15v-15v30" />
+            <polygon
+              class="nav_logo_shape"
+              fill="transparent"
+              points="39 0 0 22 0 67 39 90 78 68 78 23"
+            />
+          </g>
         </g>
-      </g>
-    </svg>
+      </svg>
     </a>
-    <span>Mohd Haroon</span>
+    <span class="nav_brand">Mohd Haroon</span>
   </div>
 </nav>
