--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -1,110 +1,109 @@
-.blog-container {
-  overflow: hidden;
-  margin: 90px auto;
-  max-width: 800px;
-  padding: 0 5vw;
-  margin-top: 0;
-
-  >h3 {
-    margin-top: 10px;
-    font-weight: 400;
-    font-size: 16px;
-  }
-  a{
-    color: black;
-    font-weight: 700;
+.blog {blog
+  &_container {
+    overflow: hidden;
+    margin: 0 auto 90px auto;
+    max-width: 800px;
+    padding: 0 5vw;
   }
 
-  h2 {
-    margin-top: 60px;
-    margin-bottom: 25px;
-  }
-
-  blockquote{
-    margin: 10px 0;
-    margin-top: 40px ;
-    border-left: 5px solid var(--accent);
-    padding-left: 10px;
-  }
-
-  >div {
+  &_header {
     margin: 0 -20px;
     padding: 30px 20px;
     border-top: 1px solid var(--slate-300);
     border-bottom: 1px solid var(--slate-300);
 
-    >div {
+    @media (prefers-color-scheme: dark) {
+      border-top: 1px solid var(--slate-700);
+      border-bottom: 1px solid var(--slate-700);
+    }
+
+    &_title {
+      margin: 20px 0 0 0;
+    }
+
+    &_date {
+      margin-top: 10px;
+      font-weight: 400;
+      font-size: 16px;
+    }
+
+    &_tags {
       display: flex;
       gap: 10px;
       flex-wrap: wrap;
       padding: 20px 0;
     }
-  }
 
-  h1 {
-    margin: 0;
-    margin-top: 20px;
-  }
-  p code {
-    background-color: var(--slate-200);
-    padding: 2px 4px;
-    border-radius: 5px;
-  }
+    &_tag {
+      padding: 4px 6px;
+      border-radius: 50px;
+      color: var(--slate-600);
+      border: 1px solid var(--slate-300);
 
-  >div>div>span {
-    padding: 4px 6px;
-    border-radius: 50px;
-    color: var(--slate-600);
-    border: 1px solid var(--slate-300);
-  }
-
-  pre {
-    border-radius: 5px;
-    font-size: 14px;
-    overflow-x: scroll;
-    margin: 30px 0;
-  }
-
-  p {
-    line-height: 1.5;
-  }
-
-  li {
-    margin: 5px 0;
-  }
-  .code{
-    position: relative;
-  }
-  img{
-    max-width: 100%;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .blog-container {
-
-    >div>div>span {
-      color: var(--slate-400);
-      border: 1px solid var(--slate-600);
+      @media (prefers-color-scheme: dark) {
+        color: var(--slate-400);
+        border: 1px solid var(--slate-600);
+      }
     }
-    >div {
-      border-top: 1px solid var(--slate-700);
-      border-bottom: 1px solid var(--slate-700);
+  }
+
+  &_content {
+    a {
+      color: black;
+      font-weight: 700;
+      letter-spacing: 1.2px;
+
+      @media (prefers-color-scheme: dark) {
+        color: white;
+      }
     }
+
+    h2 {
+      margin: 60px 0 25px 0;
+      letter-spacing: 1px;
+    }
+
+    blockquote {
+      margin: 40px 0 10px 0;
+      border-left: 5px solid var(--accent);
+      padding-left: 10px;
+    }
+
     p code {
-      background-color: var(--slate-700);
+      background-color: var(--slate-200);
+      padding: 2px 4px;
+      border-radius: 5px;
+
+      @media (prefers-color-scheme: dark) {
+        background-color: var(--slate-700);
+      }
     }
-    a{
-      color: white;
+
+    pre {
+      border-radius: 5px;
+      font-size: 14px;
+      overflow-x: scroll;
+      margin: 30px 0;
+    }
+
+    li {
+      margin: 5px 0;
+    }
+
+    .code {
+      position: relative;
+    }
+
+    img {
+      max-width: 100%;
     }
   }
 }
 
-.copy-button {
+.copy_button {
   position: absolute;
   top: 5px;
   right: 5px;
-  cursor: pointer;
   background-color: var(--slate-300);
   border-radius: 5px;
   color: var(--slate-600);
