--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,36 +1,38 @@
-section {
+.blog_section {
   max-width: 1100px;
   margin: 50px auto;
   padding: 0 5vw;
 }
 
-.home {
-  &-blog {
-    > h1 {
-      font-size: 30px;
-      font-weight: 600;
-      opacity: 0.8;
-    }
+.blog {
+  &_container {
+    width: 100%;
+  }
 
-    &-item {
+  &_title {
+    font-size: 30px;
+    font-weight: 600;
+    opacity: 0.8;
+  }
+
+  &_list {
+    &_item {
       display: flex;
       gap: 15px;
       padding: 20px 0;
       align-items: center;
-    }
 
-    a {
-      color: black;
-      font-weight: 700;
-    }
+      &_date {
+        white-space: nowrap;
+      }
 
-    span {
-      white-space: nowrap;
-    }
+      &_link {
+        color: black;
+        font-weight: 700;
 
-    @media (prefers-color-scheme: dark) {
-      a {
-        color: white;
+        @media (prefers-color-scheme: dark) {
+          color: white;
+        }
       }
     }
   }
