--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,8 +1,16 @@
-<section>
-  <div>
-    <a href="https://github.com/HaroonSaifi17"><i class="pi pi-github"></i></a>
-    <a href="https://linkedin.com/in/haroonsaifi17"><i class="pi pi-linkedin"></i></a>
-    <a href="mailto:haroonsaifidev2@gmail.com"><i class="pi pi-at"></i></a>
-    <a href="https://x.com/HaroonSaifi17_"><i class="pi pi-twitter"></i></a>
+<footer class="footer">
+  <div class="footer_social">
+    <a class="footer_social_link" href="https://github.com/HaroonSaifi17">
+      <i class="pi pi-github"></i>
+    </a>
+    <a class="footer_social_link" href="https://linkedin.com/in/haroonsaifi17">
+      <i class="pi pi-linkedin"></i>
+    </a>
+    <a class="footer_social_link" href="mailto:haroonsaifidev2@gmail.com">
+      <i class="pi pi-at"></i>
+    </a>
+    <a class="footer_social_link" href="https://x.com/HaroonSaifi17_">
+      <i class="pi pi-twitter"></i>
+    </a>
   </div>
-</section>
+</footer>
