--- a/src/app/layout/hero/hero.component.scss
+++ b/src/app/layout/hero/hero.component.scss
@@ -11,7 +11,7 @@
     padding: 40px 5vw;
   }
 
-  &-heading {
+  &_title {
     font-size: 70px;
     max-width: 1000px;
     letter-spacing: 2px;
@@ -23,16 +23,16 @@
     }
   }
 
-  &-subsection {
+  &_content {
     display: flex;
     gap: 20px;
 
-    >div {
+    > div {
       flex: 1;
     }
   }
 
-  &-subheading {
+  &_description {
     font-size: 18px;
     font-weight: 400;
     line-height: 1.4;
@@ -44,7 +44,7 @@
     }
   }
 
-  &-arc {
+  &_profile {
     display: flex;
     justify-content: right;
     align-items: center;
@@ -52,61 +52,63 @@
     @media (max-width: 768px) {
       flex: 0 !important;
     }
-  }
 
-  &-wpr {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    aspect-ratio: 1/1;
-    width: 150px;
-
-    >div {
-      position: absolute;
-      width: 100%;
-      height: 100%;
+    &_wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
+      aspect-ratio: 1/1;
+      width: 150px;
 
-      img {
-        border-radius: 100%;
-        &:hover {
-          scale: 1.1;
-          transition-duration: 0.5s;
+      > div {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          border-radius: 100%;
+
+          &:hover {
+            scale: 1.1;
+            transition-duration: 0.5s;
+          }
         }
+      }
+    }
+
+    &_text {
+      position: relative;
+      width: 0.5px;
+      height: 0.5px;
+      transform: translateY(75px);
+
+      span {
+        animation: rotate_text 100s linear infinite;
+        opacity: 0.8;
+        position: absolute;
+        display: inline-block;
+        height: 150px;
+        font-size: 12px;
+        width: 0.5px;
+        text-align: center;
+        font-weight: 700;
+        right: 0;
+        bottom: 0;
+        text-transform: uppercase;
       }
     }
   }
 }
 
-.arc-text {
-  position: relative;
-  width: 0.5px;
-  height: 0.5px;
-  transform: translateY(75px);
-  span {
-  animation: arc 100s linear infinite;
-    @keyframes arc {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-
-    opacity: 0.8;
-    position: absolute;
-    display: inline-block;
-    height: 150px;
-    font-size: 12px;
-    width: 0.5px;
-    text-align: center;
-    font-weight: 700;
-    right: 0;
-    bottom: 0;
-    text-transform: uppercase;
+@keyframes rotate_text {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
