--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,38 +1,54 @@
-#logo{
-   height:50px;
-   width:50px;
-}
-.path{
-  fill:transparent;
-  stroke:var(--slate-900);
-  stroke-width:5;
-}
-.polygon{
-  fill:transparent;
-  stroke:var(--slate-400);
-  stroke-width:5;
-  stroke-linecap:round;
-  stroke-linejoin:round;
-}
-nav div {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  max-width:1200px;
-  margin:0 auto;
-  padding:20px 5vw;
-  span{
-    font-size:18px;
-    font-weight:800;
-    text-transform:uppercase;
-    color: var(--slate-600);
-    @media(prefers-color-scheme: dark) {
-      color: var(--slate-300);
+.nav {
+  &_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px 5vw;
+  }
+
+  &_logo {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+
+    #logo {
+      height: 50px;
+      width: 50px;
+    }
+
+    &_path {
+      fill: transparent;
+      stroke: var(--slate-900);
+      stroke-width: 5;
+
+      @media (prefers-color-scheme: dark) {
+        stroke: var(--slate-50);
+      }
+    }
+
+    &_shape {
+      fill: transparent;
+      stroke: var(--slate-500);
+      stroke-width: 5;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+
+      @media (prefers-color-scheme: dark) {
+        stroke: var(--slate-300);
+      }
     }
   }
-}
-@media (prefers-color-scheme: dark) {
-  .path{
-    stroke:var(--slate-50);
+
+  &_brand {
+    font-size: 18px;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: var(--slate-600);
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--slate-300);
+    }
   }
 }
