--- a/src/app/layout/projects/projects.component.scss
+++ b/src/app/layout/projects/projects.component.scss
@@ -1,27 +1,37 @@
-.wpr {
-  max-width: 1100px;
-  margin: 50px auto;
-  padding: 0 5vw;
+.projects {
+  &_section {
+    max-width: 1100px;
+    margin: 50px auto;
+    padding: 0 5vw;
+  }
 
-  >h1 {
+  &_title {
     font-size: 30px;
     font-weight: 600;
     opacity: 0.8;
-
   }
-}
 
-.projects {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 40px 0;
-  gap: 20px;
+  &_grid {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px 0;
+    gap: 20px;
+  }
 
-  &-card {
+  &_card {
     width: 300px;
     background-color: rgba(0, 0, 0, 0.03);
     padding: 20px;
     border-radius: 5px;
+
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--slate-800);
+      border: none;
+    }
+
+    @media (max-width: 777px) {
+      width: 100%;
+    }
 
     &:hover {
       box-shadow:
@@ -35,75 +45,67 @@
       }
     }
 
-    h3 {
+    &_header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &_time {
+      color: var(--slate-600);
+      font-size: 14px;
+
+      @media (prefers-color-scheme: dark) {
+        color: var(--slate-500);
+      }
+
+      i {
+        margin-right: 5px;
+      }
+    }
+
+    &_link {
+      text-decoration: none;
+      color: var(--slate-800);
+
+      @media (prefers-color-scheme: dark) {
+        color: var(--slate-100);
+      }
+
+      &:hover {
+        scale: 1.1;
+        transition-duration: 0.5s;
+      }
+    }
+
+    &_title {
       letter-spacing: 1px;
       font-size: 25px;
+
       @media (max-width: 777px) {
         font-size: 20px;
       }
     }
 
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--slate-800);
-      border: none;
-    }
-
-    @media (max-width: 777px) {
-      width: 100%;
-    }
-
-
-    &-tags{
+    &_tags {
       display: flex;
       gap: 10px;
-      span{
-        border: 1px solid var(--slate-500);
-        color: var(--slate-500);
-        border-radius: 50px;
-        padding: 3px 8px;
-        @media (prefers-color-scheme: dark) {
-          border: 1px solid var(--slate-400);
-          color: var(--slate-400);
-        }
-
-      }
     }
 
-    >div:nth-child(1) {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    &_tag {
+      border: 1px solid var(--slate-500);
+      color: var(--slate-500);
+      border-radius: 50px;
+      padding: 3px 8px;
 
-      >a {
-        text-decoration: none;
-        color: var(--slate-800);
-        &:hover {
-          scale: 1.1;
-          transition-duration: 0.5s;
-        }
-
-        @media (prefers-color-scheme: dark) {
-          color: var(--slate-100);
-        }
-      }
-
-      >span {
-        color: var(--slate-600);
-        font-size: 14px;
-
-        @media (prefers-color-scheme: dark) {
-          color: var(--slate-500);
-        }
-
-        >i {
-          margin-right: 5px;
-        }
+      @media (prefers-color-scheme: dark) {
+        border: 1px solid var(--slate-400);
+        color: var(--slate-400);
       }
     }
-
   }
 
-  &-card:nth-child(1) h3 {
+  &_card:nth-child(1) h3 {
     color: #b45151;
 
     @media (prefers-color-scheme: dark) {
@@ -111,7 +113,7 @@
     }
   }
 
-  &-card:nth-child(2) h3 {
+  &_card:nth-child(2) h3 {
     color: #b67d47;
 
     @media (prefers-color-scheme: dark) {
@@ -119,7 +121,7 @@
     }
   }
 
-  &-card:nth-child(3) h3 {
+  &_card:nth-child(3) h3 {
     color: #a9ad4d;
 
     @media (prefers-color-scheme: dark) {
@@ -127,7 +129,7 @@
     }
   }
 
-  &-card:nth-child(4) h3 {
+  &_card:nth-child(4) h3 {
     color: #5fa15f;
 
     @media (prefers-color-scheme: dark) {
@@ -135,7 +137,7 @@
     }
   }
 
-  &-card:nth-child(5) h3 {
+  &_card:nth-child(5) h3 {
     color: #458b91;
 
     @media (prefers-color-scheme: dark) {
