--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import "primeicons/primeicons.css";
 
 :root {
-  --slate-50: #fafafa;
+  --slate-50: #fcfcfc;
   --slate-100: #f1f5f9;
   --slate-200: #e2e8f0;
   --slate-300: #cbd5e1;
@@ -19,21 +19,19 @@ body,
 html {
   margin: 0;
   padding: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 html {
   background-color: var(--slate-50);
   color: var(--slate-800);
-}
+  line-height: 1.5;
+  letter-spacing: 0px;
+  letter-spacing: 0.5px;
+  line-height: 1.5;
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    background-color: var(--slate-950);
+  @media (prefers-color-scheme: dark) {
+    background-color: var(--slate-900);
     color: var(--slate-200);
   }
 }
