--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -1,16 +1,21 @@
-<section>
-  <div>
-    <h2>ABOUT ME</h2>
-    <p>
+<section class="about">
+  <div class="about_container">
+    <h2 class="about_title">ABOUT ME</h2>
+    <p class="about_description">
       I'm a full-stack developer who learned to code by building projects and
       solving problems. I've explored various related fields, including DevOps,
       Android, and open source. I'm also a Linux enthusiast who uses Arch (by
       the way) and manages my dotfiles to perfection.
     </p>
-
-    <h4>Here’s the spread of my core skills:</h4>
-    <img class="large-img" src="/images/exp1.webp" alt="exp1" />
-    <img class="small-img" src="/images/exp2.webp" alt="exp2" />
-    <p>If you'd like to learn more about me or my work, hit me up!</p>
+    <div class="about_button">
+      <a class="about_button_resume" (click)="downloadResume()"><i class="pi pi-download"></i> Resume</a>
+      <a  class="about_button_contact" href="mailto:haroondev2@gmail.com"><i class="pi pi-envelope"></i> Contact Me</a>
+    </div>
+    <h4 class="about_skills">
+      Here's the spread of my <span class="about_skills_text">core skills</span>:
+    </h4>
+    <img class="about_img_lg" src="/images/exp1.webp" alt="exp1" />
+    <img class="about_img_sm" src="/images/exp2.webp" alt="exp2" />
+    <p class="about_cta">If you'd like to learn more about me or my work, hit me up!</p>
   </div>
 </section>
