--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -6,8 +6,8 @@
     justify-content: center;
     align-items: center;
     max-width: 1200px;
-    margin: 30px auto;
-    padding: 0 5vw;
+    margin: 0 auto;
+    padding: 30px 5vw;
 
     &_link {
       color: var(--slate-500);
